tests/NormalTests/paczka1/small_fuzzy/90316526.err
Error in line 4: S841 S699 20,6
Error in line 7: AoWWgQcaTGY S355 3,3
Error in line 10: S841 S699 81,9
Error in line 13: S841 A659 17,2
